<package>
 <name> kdl_acc_solver </name>
  <version>1.0.0</version>
  <description>
    Wraps the kdl and kdl_parser packages for generating KDL kinematic chains from URDF.
  </description>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/kdl_wrapper</url>

  <author email="fevb@kth.se">Francisco Vina</author>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>urdf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>urdf</run_depend>

</package>

